--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -12,23 +12,25 @@ html
 	font-size 62.5%
 body
 	font-family sanSerif
+
+.overflowWrap
 	overflow-x hidden
 
-+for_bp(sml)
-	body 
-		background yellow
+// +for_bp(sml)
+// 	body 
+// 		background yellow
 
-+for_bp(med)
-	body
-		background green
+// +for_bp(med)
+// 	body
+// 		background green
 
-+for_bp(lrg)
-	body
-		background blue
+// +for_bp(lrg)
+// 	body
+// 		background blue
 
-+for_bp(xlrg)
-	body
-		background cadetblue
+// +for_bp(xlrg)
+// 	body
+// 		background cadetblue
 
 h1
 	// font-family serif
